# excepciones

./: .gitignore  CMakeLists.txt  README.md
ej0/: CMakeLists.txt  main.cpp
ej1/: CMakeLists.txt  Resolver.cpp  Resolver.h  Socket.cpp  Socket.h  main.cpp
ej2/: CMakeLists.txt  Resolver.cpp  Socket.cpp  Socket.h  main.cpp
ej3/: CMakeLists.txt  OSError.cpp  OSError.h  Resolver.cpp  Socket.cpp  Socket.h  main.cpp
lib/: CMakeLists.txt  Date.cpp  Date.h  DoubleBuffer.cpp  DoubleBuffer.h  DummyFile.cpp  DummyFile.h  Stack.cpp  Stack.h
test/: CMakeLists.txt  main_test.cpp
